--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,14 @@
 <h1>
     Users List
 </h1>
-<div>
-    <% @users.each do |user| %>
-        <div>
-            <img src='<%= user.photo %>'>
-        </div>
-        <div>
-           <h2>
-                <%= user.name %>
-            </h2>
-            <div>
-
-                <%= user.posts.count %>
-            </div>
-        </div>
-    <% end %>
-</div>
+<% if @users.any? %>
+    <ul>
+        <% @users.each do |user| %>
+            <li>
+                <img src="<%= user.photo %>" alt="<%= user.name %>" />
+                <%= link_to user.name, user_path(user) %>
+                <%= link_to user.posts.count, user_posts_path(user) %>
+            </li>
+        <% end %>
+    </ul>
+<% end %>
