write html for a user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,30 @@
 <h1>User Profile</h1>
+<div>
+    <img src="<%= @user.photo %>" alt="<%= @user.name %>" />
+    <%= link_to @user.name, user_path(@user) %>
+    <%= link_to @user.posts.count, user_posts_path(@user) %>
+</div>
+<div>
+    Bio: 
+    <p>
+        <%= @user.bio %>
+    </p>
+</div>
+<% if @user.posts.any? %>
+    <ul>
+        <% @user.posts.each do |post| %>
+            <li>
+                <h2>Post #<%= post.id %></h2>
+                <%= link_to post.title, user_post_path(@user, post) %>
+                <div>
+                    <p>
+                        Comments: <%= post.comments.count %>
+                    </p>
+                    <p>
+                        Likes: <%= post.likes.count %>
+                    </p>
+                </div>
+            </li>
+        <% end %>
+    </ul>
+<% end %>
