add html for selected specified post details page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,9 @@
             <div>
                 <h2>Post #<%= post.id %></h2>
                 <p><%= post.title %></p>
+                <p>
+                    <%= post.text %>
+                </p>
                 <div>
                     <p>
                         Likes: <%= post.likes.count %> ❤️
