--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,12 @@
 <h1>Post #<%= @post.id %> Details</h1>
 <div>
     <h2>Post #<%= @post.id %> by <%= @user.name %></h2>
-    <p><%= @post.likes.count %> ❤️</p>
-    <p><%= @post.comments.count %> 📝</p>
+    <%= render 'shared/count-likes-comments', post: @post %>
 </div>
 <div>
     <h2><%= @post.title %></h2>
     <p><%= @post.text %></p>
 </div>
-<div>
-    <h2>Comments</h2>
-    <ul>
-        <% @post.comments.each do |comment| %>
-            <li>
-                <p>
-                    Comment #<%= comment.id %>: <%= comment.text %>
-                </p>
-            </li>
-        <% end %>
-    </ul>
-</div>
+<%= render 'shared/list-comments', post: @post %>
 
 
