--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,39 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+    background-color: #f5f5f5;
+    padding: 1rem;
+ }
+
+ .user {
+    margin-bottom: 20px;
+    display: flex;
+ }
+
+ .user-image {
+    width: 17%;
+    height: auto;
+    border-radius: 50%;
+    margin-right: 10px;
+ }
+
+ .user-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid black;
+    padding: 1rem;
+    margin: 0.5rem 1.5rem;
+    width: 78%;
+ }
+
+ .user-info h2 {
+    font-weight: bold;
+    font-size: 1.5rem;
+ }
+
+ .user-info p {
+    font-size: 0.7rem;
+ }
