--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,5 +1,9 @@
-<div>
-    <img src="<%= user.photo %>" alt="<%= user.name %>" />
-    <%= link_to user.name, user_path(user) %>
-    <%= link_to user.posts.count, user_posts_path(user) %>
+<div class="user">
+    <div class="user-image">
+        <img src="<%= user.photo %>" alt="<%= user.name %>" />
+    </div>
+    <div class="user-info">
+        <h2>User Name: <%= link_to user.name, user_path(user) %></h2>
+        <p>Number of posts: <%= link_to user.posts.count, user_posts_path(user) %></p>
+    </div>
 </div>
