add some style to the user's profile page

--- a/app/views/shared/_count-likes-comments.html.erb
+++ b/app/views/shared/_count-likes-comments.html.erb
@@ -1,8 +1,5 @@
-<div>
+<div class="likes-comments-ammount">
     <p>
-        Likes: <%= post.likes.count %> ❤️
-    </p>
-    <p>
-        Comments: <%= post.comments.count %> 📝
+        Likes: <%= post.likes.count %> ❤️, Comments: <%= post.comments.count %> 💬
     </p>
 </div>
