--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,21 @@
  *= require_tree .
  *= require_self
  */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
  body {
     background-color: #f5f5f5;
-    padding: 1rem;
+    padding: 2rem;
+ }
+
+ h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
  }
 
  .user {
@@ -31,14 +42,17 @@
     margin-right: 10px;
  }
 
+ .border {
+    border: 2px solid black;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+ }
+
  .user-info {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 2px solid black;
-    padding: 1rem;
-    margin: 0.5rem 1.5rem;
-    width: 78%;
  }
 
  .user-info h2 {
@@ -48,4 +62,9 @@
 
  .user-info p {
     font-size: 0.7rem;
+ }
+
+ .likes-comments-ammount {
+    display: flex;
+    justify-content: flex-end;
  }
