add some style for the user posts page

--- a/app/views/shared/_list-comments.html.erb
+++ b/app/views/shared/_list-comments.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="border comments">
     <% if post.comments.any? %>
         <h2>Comments</h2>
         <% post.comments.each do |comment| %>
