--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <% if @posts.any? %>
     <div>
         <% @posts.each do |post| %>
-            <div>
+            <div class="border">
                 <h2>Post #<%= post.id %></h2>
                 <p><%= post.title %></p>
                 <p>
