add the button see all posts to direct to user posts page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,3 +26,6 @@
             This user has no posts.
         </p>
 <% end %>
+<button class="border">
+    <%= link_to 'See All Posts', user_posts_path(@user) %>
+</button>
