change the comments section for posts page to show only five most recent comments

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
                 </p>
                 <%= render 'shared/count-likes-comments', post: post %>
             </div>
-            <%= render 'shared/list-comments', post: post%>
+            <%= render 'shared/five-recent-comments', comments: post.five_most_recent_comments %>
         <% end %>
     </div>
     <% else %>
