add the form for creating comments for a post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,15 @@
     <p><%= @post.text %></p>
 </div>
 <%= render 'shared/list-comments', post: @post %>
+<%= form_with model: @comment, url: post_comments_path(@post), local: true do |form| %>
+    <div class="field">
+        <%= form.hidden_field :author_id, value: @post.author.id %>
+        <%= form.hidden_field :post_id, value: @post.id %>
+        <%= form.label :text %>
+        <%= form.text_area :text %>
+    </div>
+    <div class="actions">
+        <%= form.submit %>
+    </div>
 
 
