solve the create new post issue

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,15 @@
 <h1>New Post</h1>
 
 <%= form_with model: @post, url: new_post_path do |form| %>
-  <%= form.label :title %>
-  <%= form.text_field :title %>
-
-  <%= form.label :text %>
-  <%= form.text_area :text %>
-
-  <%= form.submit %>
+    <div class="field">
+        <%= form.label :title %>
+        <%= form.text_field :title %>
+    </div>
+    <div class="field">
+        <%= form.label :text %>
+        <%= form.text_area :text %>
+    </div>
+    <div class="actions">
+        <%= form.submit %>
+    </div>
 <% end %>
