--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,3 +17,11 @@
         <%= form.submit %>
     </div>
 <% end %>
+<%= form_with model: @like, url: likes_new_path do |form| %>
+    <div class="field">
+        <%= form.hidden_field :post_id, value: @post.id %>
+    </div>
+    <div class="actions">
+        <%= form.submit "Like ♥️" %>
+    </div>
+<% end %>
