--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <h1>User Posts</h1>
 <%= render 'shared/user', user: @user %>
-<% if @posts.any? %>
+<% if @user.posts.any? %>
     <div>
-        <% @posts.each do |post| %>
+        <% @user.posts.each do |post| %>
             <div class="border">
                 <h2>Post #<%= post.id %></h2>
-                <p><%= post.title %></p>
+                <p><%= link_to post.title, user_post_path(@user, post) %></p>
                 <p>
                     <%= post.text %>
                 </p>
