--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,22 @@
 <h1>New Post</h1>
 
-<%= form_with model: @post, url: new_post_path do |form| %>
-    <div class="field">
-        <%= form.label :title %>
-        <%= form.text_field :title %>
+<div class="container text-center">
+  <form action="/users/<%=params[:user_id]%>/posts" method="POST">
+    <%= csrf_meta_tags %>
+    <div class="form-group p-2">
+      <label class="post-title">Title</label><br>
+      <input type="text" class="form-control" name="title"><br>
     </div>
-    <div class="field">
-        <%= form.label :text %>
-        <%= form.text_area :text %>
+    <div class="form-group  p-2">
+      <label class="post-description">Write your post</label><br>
+      <textarea class="form-control" name="text"></textarea>
     </div>
-    <div class="actions">
-        <%= form.submit %>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+      </div>
     </div>
-<% end %>
+  </form>
+</div>
