--- a/app/views/shared/_list-comments.html.erb
+++ b/app/views/shared/_list-comments.html.erb
@@ -4,8 +4,13 @@
         <% post.comments.each do |comment| %>
             <div>
                 <p>
-                    Comment #<%= comment.id %> by <%= comment.author.name %>: <%= comment.text %>
+                    ➡️ #<%= comment.id %> by <%= comment.author.name %>: <%= comment.text %>
                 </p>
+                <% if can? :destroy, comment %>
+                    <%= link_to user_post_path(comment.post.author_id, comment.post.id), method: :delete do %>
+                        <button class="btn btn-danger">Delete Comment</button>
+                    <% end %>
+                <% end %>
             </div>
         <% end %>
     <% else %>
