add the link to the delete button for post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
     <%= render 'shared/count-likes-comments', post: @post %>
     <h2><%= @post.title %></h2>
     <p><%= @post.text %></p>
-    <%= link_to user_post_path(@post.author_id, @post.id), method: :delete do %>
+    <%= link_to user_posts_path(@user) do %>
         <% if can? :destroy, @post%>
             <button class="btn btn-danger">Delete Post</button>
         <% end %>
