--- a/app/views/shared/_five-recent-comments.html.erb
+++ b/app/views/shared/_five-recent-comments.html.erb
@@ -4,7 +4,7 @@
         <%= comments.each do |comment| %>
             <div>
                 <p>
-                    Comment #<%= comment.id %> by <%= comment.author.name %>: <%= comment.text %>
+                    ➡️ #<%= comment.id %> by <%= comment.author.name %>: <%= comment.text %>
                 </p>
             </div>
         <% end %>
